-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Fix Version/s: 0.4.14
-
Component/s: None
-
Labels:None
-
Environment:
VirtualBox 5.1.38.
-
Module:
-
Guilty Commit:0.4.13-dev-986-g029b8f2 https://git.reactos.org/?p=reactos.git;a=commit;h=029b8f2cf9912b148f3e60be0472652f26a1adb9
-
External URL:
Download it from the official website: http://down.360safe.com/cse/360cse_official.exe.
Older 11.0.xxxx and 9.5.0.138 versions are known to be installing and working correctly. Latest version from the link above hangs at 99% of setup.
Ftr, this browser works fine on Win2k3 and officially supports XP/2003.
In debug.log which I got when trying to install 360 Extreme Explorer, I see a one suspicious line about the missing Windows 8/Server 2012+ GetSystemTimePreciseAsFileTime, which due to this is not called properly in apisets and kernel32 itself:
WARNING: calling stub GetSystemTimePreciseAsFileTime()
|
I double-rechecked: adding a stub for this function according to https://docs.microsoft.com/en-us/windows/win32/api/sysinfoapi/nf-sysinfoapi-getsystemtimepreciseasfiletime and proper call it in apisets and kernel32 indeed fixes the problem for me. After my changes, the installer does no longer hang during the program's setup. The browser installs correctly and starts automatically after installation.
So it's indeed a source of problem.
But I still don't understand only one: if XP/2k3 has no even a stub for GetSystemTimePreciseAsFileTime and 360EE works fine there, why it does not work on ROS and needs that function? Maybe our kernel32 is a bit different than Win2k3's in this case?...
- blocks
-
CORE-13231 Support apisets/api-forwarders
-
- Resolved
-
- relates to
-
CORE-17383 Apisets Pseudo-Regression, 360 Safe Explorer (not Extreme) 12.2.1678.0 Installer doesn't work
-
- Reopened
-
-
CORE-16631 Apisets, provide an option to limit what LDR makes visible to apps by default
-
- Resolved
-