[KERNEL32] GetSystemTimePreciseAsFileTime(): Set an out value

Addendum to #1963 c6b64448ce46d1f1ca80850f4a358f2bf74178f7.

CORE-16420